<resources>
    <string name="app_name">E-Kay</string>
    <string name="order_header">Order Information</string>
    <string name="header">Registration Form</string>
    <string name="name_field">Full Name:</string>
    <string name="age_field">Age:</string>
    <string name="country_field">Country</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_hint">A-Z,a-z</string>
    <string name="age_hint">16–100</string>
    <string name="default_country">Select</string>

    <string-array name="country_arrays">
        <item>@string/default_country</item>
        <item>Israel</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
    </string-array>

    <string name="welcome_message">Welcome %1$s.</string>
    <string name="order_message">Please make an order:</string>
    <string name="order_button">Order</string>
    <string name="device_type">MI5</string>

</resources>
